src-tauri/abilities-macro/tests/trybuild/read_ability_module_alias_fails.stderr
error: Read abilities cannot call mutating services; detected: services::accounts::update_account_field
   --> tests/trybuild/read_ability_module_alias_fails.rs:230:10
    |
230 | async fn read_module_alias_mutation(
    |          ^^^^^^^^^^^^^^^^^^^^^^^^^^
